--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+* {
+  font-weight: 300;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-height: 900px) {
+  body {
+    height: 100%;
+    width: 100%;
+  }
+  * {
+    box-sizing: border-box;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.table-wrapper {
+  overflow-x: auto;
+}
+div.dt-top-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
-.App-link {
-  color: #61dafb;
+div.dt-center-in-div {
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.dt-filter-spacer {
+  margin: 10px 0;
 }
