--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+a {
+  text-decoration: none;
+}
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif !important;
